--- a/package.json
+++ b/package.json
@@ -29,13 +29,20 @@
     "@open-wc/building-rollup": "^1.9.4",
     "@rollup/plugin-json": "^4.1.0",
     "@types/debug": "^4.1.7",
+    "@types/node": "^16.10.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@web/dev-server": "0.0.29",
     "@web/dev-server-rollup": "^0.3.2",
     "concurrently": "^5.3.0",
+    "cssnano": "^5.0.8",
     "deepmerge": "^4.2.2",
     "eslint-config-google": "^0.14.0",
+    "postcss-cssnext": "^3.1.1",
+    "postcss-discard-comments": "^5.0.1",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.6",
+    "postcss-simple-vars": "^6.0.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.34.2",
     "rollup-plugin-babel": "^4.4.0",
@@ -43,13 +50,20 @@
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^4.0.1",
+    "rollup-plugin-postcss-modules": "^2.0.2",
+    "rollup-plugin-sass": "^1.2.9",
+    "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-uglify": "^6.0.4",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "autoprefixer": "^10.0.2",
     "debug": "^4.3.2",
     "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0"
+    "lit-html": "^1.3.0",
+    "postcss": "^8.1.7",
+    "postcss-loader": "^4.0.4"
   }
 }
