--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true, 
     "emitDecoratorMetadata": true,
-    "esModuleInterop": false, 
+    "esModuleInterop": true, 
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["es2017", "dom"], 
